Update 28. Indikator Iman.html

--- a/28. Indikator Iman.html
+++ b/28. Indikator Iman.html
@@ -142,103 +142,103 @@
 <body>
 
     <h1>IMAN METRIC SYSTEM</h1>
-    <div class="subtitle">Indikator Kesadaran & Tindakan Nyata</div>
+    <div class="subtitle">Indikator Kesadaran & Contoh Iman = Ukuran dalam Tindakan Nyata</div>
 
     <div class="grid-container">
 
         <div class="pillar-card" style="border-top: 3px solid #ff0055;">
             <div class="card-title">1. IMAN KEPADA ALLAH <span class="card-badge">Kesadaran Ketuhanan</span></div>
             <div class="check-group" id="p1">
-                <label class="check-item"><input type="checkbox"> Ketundukan tanpa pengawasan <span class="core-tag">(KETUNDUKAN)</span></label>
-                <label class="check-item"><input type="checkbox"> Kejujuran saat rugi <span class="core-tag">(INTEGRITAS)</span></label>
-                <label class="check-item"><input type="checkbox"> Tidak panik kehilangan materi <span class="core-tag">(KETERGANTUNGAN)</span></label>
-                <label class="check-item"><input type="checkbox"> Konsistensi prinsip <span class="core-tag">(ISTIQAMAH)</span></label>
-                <label class="check-item"><input type="checkbox"> Kerendahan hati <span class="core-tag">(TAWADHU)</span></label>
-                <label class="check-item"><input type="checkbox"> Kesabaran menghadapi ujian <span class="core-tag">(SABAR)</span></label>
-                <label class="check-item"><input type="checkbox"> Rasa cukup <span class="core-tag">(QANAAH)</span></label>
-                <label class="check-item"><input type="checkbox"> Tanggung jawab pribadi <span class="core-tag">(MAS'ULIYAH)</span></label>
-                <label class="check-item"><input type="checkbox"> Syukur non-verbal <span class="core-tag">(AKSI SYUKUR)</span></label>
-                <label class="check-item"><input type="checkbox"> Menahan diri saat ada peluang dosa <span class="core-tag">(IFFAH)</span></label>
+                <label class="check-item"><input type="checkbox"> Apakah patuh meski tanpa pengawasan <span class="core-tag">(Ketundukan)</span></label>
+                <label class="check-item"><input type="checkbox"> Jujur saat rugi, bukan saat untung <span class="core-tag">(Kejujuran)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak panik saat kehilangan materi <span class="core-tag">(Ketergantungan)</span></label>
+                <label class="check-item"><input type="checkbox"> Prinsip sama saat lapang & sempit <span class="core-tag">(Konsistensi)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak merasa paling benar <span class="core-tag">(Kerendahan hati)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak bereaksi berlebihan saat diuji <span class="core-tag">(Kesabaran)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak serakah meski mampu <span class="core-tag">(Rasa cukup)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak menyalahkan orang lain <span class="core-tag">(Tanggung jawab)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak kufur saat nikmat biasa <span class="core-tag">(Syukur)</span></label>
+                <label class="check-item"><input type="checkbox"> Menahan diri saat ada peluang dosa <span class="core-tag">(Takwa operasional)</span></label>
             </div>
         </div>
 
         <div class="pillar-card" style="border-top: 3px solid #00f3ff;">
             <div class="card-title">2. IMAN KEPADA MALAIKAT <span class="card-badge">Kesadaran Pengawasan</span></div>
             <div class="check-group" id="p2">
-                <label class="check-item"><input type="checkbox"> Disiplin tanpa sanksi <span class="core-tag">(DISIPLIN)</span></label>
-                <label class="check-item"><input type="checkbox"> Integritas publik & privat <span class="core-tag">(MURAQABAH)</span></label>
-                <label class="check-item"><input type="checkbox"> Etika saat emosi <span class="core-tag">(KONTROL DIRI)</span></label>
-                <label class="check-item"><input type="checkbox"> Kontrol lisan <span class="core-tag">(LISAN TERJAGA)</span></label>
-                <label class="check-item"><input type="checkbox"> Rasa bersalah saat salah <span class="core-tag">(SENSITIVITAS DOSA)</span></label>
-                <label class="check-item"><input type="checkbox"> Ketelitian tindakan <span class="core-tag">(ITQAN)</span></label>
-                <label class="check-item"><input type="checkbox"> Amanah terhadap titipan <span class="core-tag">(AMANAH)</span></label>
-                <label class="check-item"><input type="checkbox"> Konsistensi moral <span class="core-tag">(AKHLAK)</span></label>
-                <label class="check-item"><input type="checkbox"> Tanggung jawab etis <span class="core-tag">(ETIKA)</span></label>
-                <label class="check-item"><input type="checkbox"> Kesadaran konsekuensi <span class="core-tag">(WASPADA)</span></label>
+                <label class="check-item"><input type="checkbox"> Tertib meski tak ada sanksi <span class="core-tag">(Disiplin)</span></label>
+                <label class="check-item"><input type="checkbox"> Hati-hati dalam ucapan & tindakan <span class="core-tag">(Ketelitian)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak beda wajah publik & privat <span class="core-tag">(Integritas)</span></label>
+                <label class="check-item"><input type="checkbox"> Menjaga adab saat emosi <span class="core-tag">(Etika)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak asal bicara <span class="core-tag">(Akurasi)</span></label>
+                <label class="check-item"><input type="checkbox"> Takasa bersalah saat berbuat salah <span class="core-tag">(Tanggung jawab moral)</span></label>
+                <label class="check-item"><input type="checkbox"> Menahan impuls destruktif <span class="core-tag">(Kontrol diri)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak oportunis <span class="core-tag">(Konsistensi nilai)</span></label>
+                <label class="check-item"><input type="checkbox"> Menjaga titipan <span class="core-tag">(Amanah)</span></label>
+                <label class="check-item"><input type="checkbox"> Sadar semua ada konsekuensi <span class="core-tag">(Kesadaran catatan)</span></label>
             </div>
         </div>
 
         <div class="pillar-card" style="border-top: 3px solid #00ff41;">
             <div class="card-title">3. IMAN KEPADA KITAB <span class="card-badge">Kepatuhan Nilai</span></div>
             <div class="check-group" id="p3">
-                <label class="check-item"><input type="checkbox"> Keputusan berbasis nilai <span class="core-tag">(FURQAN)</span></label>
-                <label class="check-item"><input type="checkbox"> Tidak memanipulasi aturan <span class="core-tag">(JUJUR ATURAN)</span></label>
-                <label class="check-item"><input type="checkbox"> Konsistensi moral <span class="core-tag">(ADAB)</span></label>
-                <label class="check-item"><input type="checkbox"> Tunduk pada hukum <span class="core-tag">(TAAT ASAS)</span></label>
-                <label class="check-item"><input type="checkbox"> Objektivitas nilai <span class="core-tag">(ADIL)</span></label>
-                <label class="check-item"><input type="checkbox"> Anti pembenaran diri <span class="core-tag">(OBJEKTIF)</span></label>
-                <label class="check-item"><input type="checkbox"> Mau dikoreksi kebenaran <span class="core-tag">(TERBUKA)</span></label>
-                <label class="check-item"><input type="checkbox"> Keadilan sosial <span class="core-tag">(QIST)</span></label>
-                <label class="check-item"><input type="checkbox"> Nilai jadi tindakan <span class="core-tag">(AMAL NYATA)</span></label>
-                <label class="check-item"><input type="checkbox"> Tidak menjual nilai <span class="core-tag">(HARGA DIRI)</span></label>
+                <label class="check-item"><input type="checkbox"> Keputusan berbasis nilai, bukan selera <span class="core-tag">(Referensi nilai)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak cari celah pembenaran <span class="core-tag">(Ketaatan hukum)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak pilih ayat sesuai kepentingan <span class="core-tag">(Objektivitas)</span></label>
+                <label class="check-item"><input type="checkbox"> Prinsip sama untuk diri & orang lain <span class="core-tag">(Konsistensi moral)</span></label>
+                <label class="check-item"><input type="checkbox"> Memahami makna, bukan slogan <span class="core-tag">(Literasi nilai)</span></label>
+                <label class="check-item"><input type="checkbox"> Nilai jadi tindakan <span class="core-tag">(Implementasi)</span></label>
+                <label class="check-item"><input type="checkbox"> Mau dikoreksi oleh kebenaran <span class="core-tag">(Koreksi diri)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak menjual ayat <span class="core-tag">(Anti manipulasi)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak berat sebelah <span class="core-tag">(Keadilan)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak merasa di atas hukum <span class="core-tag">(Tunduk pada aturan)</span></label>
             </div>
         </div>
 
         <div class="pillar-card" style="border-top: 3px solid #ffcc00;">
             <div class="card-title">4. IMAN KEPADA RASUL <span class="card-badge">Keteladanan Sosial</span></div>
             <div class="check-group" id="p4">
-                <label class="check-item"><input type="checkbox"> Kejujuran publik <span class="core-tag">(SIDDIQ)</span></label>
-                <label class="check-item"><input type="checkbox"> Kepemimpinan melayani <span class="core-tag">(KHADIM)</span></label>
-                <label class="check-item"><input type="checkbox"> Empati sosial <span class="core-tag">(UKHUWAH)</span></label>
-                <label class="check-item"><input type="checkbox"> Ketegasan moral <span class="core-tag">(TEGAS)</span></label>
-                <label class="check-item"><input type="checkbox"> Berani menegakkan benar <span class="core-tag">(SYAJA'AH)</span></label>
-                <label class="check-item"><input type="checkbox"> Amanah kepercayaan <span class="core-tag">(TERPERCAYA)</span></label>
-                <label class="check-item"><input type="checkbox"> Konsistensi ucapan & tindakan <span class="core-tag">(SATUNYA KATA)</span></label>
-                <label class="check-item"><input type="checkbox"> Tanggung jawab kolektif <span class="core-tag">(RA'IN)</span></label>
-                <label class="check-item"><input type="checkbox"> Keteladanan nyata <span class="core-tag">(USWAH)</span></label>
-                <label class="check-item"><input type="checkbox"> Anti kemunafikan <span class="core-tag">(AUTENTIK)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak manipulatif <span class="core-tag">(Kejujuran sosial)</span></label>
+                <label class="check-item"><input type="checkbox"> Melayani, bukan menguasai <span class="core-tag">(Kepemimpinan)</span></label>
+                <label class="check-item"><input type="checkbox"> Lisan & tindakan selaras <span class="core-tag">(Akhlak)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak tega merugikan <span class="core-tag">(Empati)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak abu-abu pada kebatilan <span class="core-tag">(Ketegasan moral)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak lepas tangan <span class="core-tag">(Tanggung jawab publik)</span></label>
+                <label class="check-item"><input type="checkbox"> Berani benar meski sendiri <span class="core-tag">(Keberanian)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak munafik <span class="core-tag">(Konsistensi dakwah)</span></label>
+                <label class="check-item"><input type="checkbox"> Memberi contoh, bukan teori <span class="core-tag">(Keteladanan)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak khianat kepercayaan <span class="core-tag">(Amanah kolektif)</span></label>
             </div>
         </div>
 
         <div class="pillar-card" style="border-top: 3px solid #9d00ff;">
             <div class="card-title">5. IMAN KEPADA HARI AKHIR <span class="card-badge">Visi Jangka Panjang</span></div>
             <div class="check-group" id="p5">
-                <label class="check-item"><input type="checkbox"> Pengendalian diri <span class="core-tag">(MUJAHADAH)</span></label>
-                <label class="check-item"><input type="checkbox"> Tidak impulsif <span class="core-tag">(TENANG)</span></label>
-                <label class="check-item"><input type="checkbox"> Kesadaran akibat <span class="core-tag">(VISIONER)</span></label>
-                <label class="check-item"><input type="checkbox"> Anti hedonisme <span class="core-tag">(ZUHUD)</span></label>
-                <label class="check-item"><input type="checkbox"> Akuntabilitas moral <span class="core-tag">(HISAB DIRI)</span></label>
-                <label class="check-item"><input type="checkbox"> Keadilan saat berkuasa <span class="core-tag">(AMANAH KUASA)</span></label>
-                <label class="check-item"><input type="checkbox"> Tidak menunda kebaikan <span class="core-tag">(SEGERA)</span></label>
-                <label class="check-item"><input type="checkbox"> Kesungguhan amal <span class="core-tag">(TOTALITAS)</span></label>
-                <label class="check-item"><input type="checkbox"> Konsistensi nilai hidup <span class="core-tag">(PRINSIP)</span></label>
-                <label class="check-item"><input type="checkbox"> Kesadaran kematian <span class="core-tag">(INGAT MATI)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak impulsif <span class="core-tag">(Pengendalian diri)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak hidup hanya untuk instan <span class="core-tag">(Prioritas)</span></label>
+                <label class="check-item"><input type="checkbox"> Siap bertanggung jawab <span class="core-tag">(Akuntabilitas)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak zalim meski berkuasa <span class="core-tag">(Etika kekuasaan)</span></label>
+                <label class="check-item"><input type="checkbox"> Takut berbuat curang <span class="core-tag">(Keadilan)</span></label>
+                <label class="check-item"><input type="checkbox"> Pikir dampak sebelum bertindak <span class="core-tag">(Kesadaran akibat)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak hidup untuk kesenangan <span class="core-tag">(Anti hedonisme)</span></label>
+                <label class="check-item"><input type="checkbox"> Bukan pencitraan <span class="core-tag">(Kesungguhan amal)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak menunda kebaikan <span class="core-tag">(Kesadaran kematian)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak pragmatis sesaat <span class="core-tag">(Konsistensi nilai)</span></label>
             </div>
         </div>
 
         <div class="pillar-card" style="border-top: 3px solid #ffffff;">
             <div class="card-title">6. IMAN KEPADA QADA & QADAR <span class="card-badge">Kematangan Realitas</span></div>
             <div class="check-group" id="p6">
-                <label class="check-item"><input type="checkbox"> Ikhtiar aktif <span class="core-tag">(KASAB)</span></label>
-                <label class="check-item"><input type="checkbox"> Tidak menyalahkan takdir <span class="core-tag">(HUSNUZHAN)</span></label>
-                <label class="check-item"><input type="checkbox"> Ketahanan mental <span class="core-tag">(RESILIENSI)</span></label>
-                <label class="check-item"><input type="checkbox"> Stabilitas emosi <span class="core-tag">(STABIL)</span></label>
-                <label class="check-item"><input type="checkbox"> Penerimaan realitas <span class="core-tag">(RIDHA)</span></label>
-                <label class="check-item"><input type="checkbox"> Adaptif terhadap kondisi <span class="core-tag">(ADAPTASI)</span></label>
-                <label class="check-item"><input type="checkbox"> Tahu batas kendali <span class="core-tag">(TAWAKAL)</span></label>
-                <label class="check-item"><input type="checkbox"> Tawakal setelah usaha <span class="core-tag">(PENYERAHAN)</span></label>
-                <label class="check-item"><input type="checkbox"> Kedewasaan sikap <span class="core-tag">(DEWASA)</span></label>
-                <label class="check-item"><input type="checkbox"> Tidak playing victim <span class="core-tag">(TANGGUNG JAWAB)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak pasrah malas <span class="core-tag">(Ikhtiar)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak menyalahkan takdir <span class="core-tag">(Tanggung jawab)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak hancur saat gagal <span class="core-tag">(Ketahanan mental)</span></label>
+                <label class="check-item"><input type="checkbox"> Mampu menyesuaikan realitas <span class="core-tag">(Adaptasi)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak irasional <span class="core-tag">(Rasionalitas)</span></label>
+                <label class="check-item"><input type="checkbox"> Usaha maksimal + pasrah <span class="core-tag">(Tawakal aktif)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak meledak-ledak <span class="core-tag">(Kestabilan emosi)</span></label>
+                <label class="check-item"><input type="checkbox"> Tahu mana bisa diubah <span class="core-tag">(Kesadaran batas)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak denial <span class="core-tag">(Penerimaan)</span></label>
+                <label class="check-item"><input type="checkbox"> Tidak playing victim <span class="core-tag">(Kedewasaan)</span></label>
             </div>
         </div>
 
@@ -334,4 +334,5 @@
     </script>
 
 </body>
+
 </html>
