--- a/index.html
+++ b/index.html
@@ -306,6 +306,10 @@
     <div class="app-icon">📶</div>
     <div class="app-label">Iman Metric</div>
 </a>
+            <a href="29. Pustaka Ajaran Tauhid.html" class="app-card cat-doc">
+    <div class="app-icon">📄</div>
+    <div class="app-label">Pustaka Ajaran Tauhid</div>
+</a>
             
 </a>
 
@@ -381,6 +385,7 @@
     </script>
 </body>
 </html>
+
 
 
 
