--- a/index.html
+++ b/index.html
@@ -310,6 +310,10 @@
     <div class="app-icon">📄</div>
     <div class="app-label">Pustaka Ajaran Tauhid</div>
 </a>
+            <a href="30. Quantum Vitality.html" class="app-card cat-future">
+    <div class="app-icon">⚛️</div>
+    <div class="app-label">Quantum Vitality</div>
+</a>
             
 </a>
 
@@ -385,6 +389,7 @@
     </script>
 </body>
 </html>
+
 
 
 
