--- a/index.html
+++ b/index.html
@@ -314,6 +314,10 @@
     <div class="app-icon">⚛️</div>
     <div class="app-label">Quantum Vitality</div>
 </a>
+            <a href="31. Holistic Calibration.html" class="app-card cat-edu">
+    <div class="app-icon">📡</div>
+    <div class="app-label">Holistic Radar</div>
+</a>
             
 </a>
 
@@ -389,6 +393,7 @@
     </script>
 </body>
 </html>
+
 
 
 
