Update 31. Holistic Calibration.html

--- a/31. Holistic Calibration.html
+++ b/31. Holistic Calibration.html
@@ -268,16 +268,16 @@
                 "IHSAN: Manunggal / Kesadaran Tinggi"
             ],
             fin: [
-                "BANGKRUT: Utang Menumpuk / Dikejar Kolektor",
-                "MINUS: Besar Pasak daripada Tiang",
-                "KRITIS: Gaji Cuma Numpang Lewat",
-                "SURVIVAL: Pas-pasan / Tidak Ada Tabungan",
-                "AMAN: Cukup untuk Kebutuhan Dasar",
-                "NYAMAN: Ada Tabungan Darurat",
-                "BERTUMBUH: Mulai Investasi",
-                "MAPAN: Aset Produktif Jalan",
-                "KAYA: Passive Income > Pengeluaran",
-                "FREEDOM: Uang Bekerja untuk Anda"
+                "PARASIT: Bergantung Total / Menjadi Beban Orang Lain",
+                "DEFISIT: Energi Keluar > Nilai yang Dihasilkan (Tekor)",
+                "BARTER: Menukar Waktu & Fisik demi Bertahan (Rat Race)",
+                "MANDIRI: Mampu Menciptakan Nilai untuk Kebutuhan Dasar",
+                "TERAMPIL: Punya Skill Spesifik Bernilai Tinggi (High Value)",
+                "SURPLUS: Produksi > Konsumsi / Punya Simpanan Aset",
+                "AKUMULATIF: Memiliki Aset Riil (Emas/Tanah/Ilmu/Network)",
+                "SISTEMIK: Membangun Ekosistem yang Menghidupi Otomatis",
+                "MAKMUR: Kelimpahan Sumber Daya & Kepercayaan (Trust)",
+                "BERDAULAT: Merdeka Mutlak / Tidak Tergantung Sistem Uang"
             ],
             soc: [
                 "TOXIC: Membenci & Dibenci",
@@ -482,4 +482,5 @@
         }
     </script>
 </body>
+
 </html>
