--- a/index.html
+++ b/index.html
@@ -318,6 +318,10 @@
     <div class="app-icon">📡</div>
     <div class="app-label">Holistic Radar</div>
 </a>
+            <a href="32. Legacy Hub.html" class="app-card cat-fin">
+    <div class="app-icon">🌳</div>
+    <div class="app-label">Warisan Generasi</div>
+</a>
             
 </a>
 
@@ -393,6 +397,7 @@
     </script>
 </body>
 </html>
+
 
 
 
