--- a/index.html
+++ b/index.html
@@ -418,6 +418,10 @@
         <a href="32. Legacy Hub.html" class="app-card cat-fin">
             <div class="app-icon">🌳</div><div class="app-label">Warisan Generasi</div>
         </a>
+        <a href="33. Civilization Hub.html" class="app-card cat-future">
+    <div class="app-icon">🌍</div>
+    <div class="app-label">Civilization Hub</div>
+</a>
 
     </div>
 
@@ -536,3 +540,4 @@
     </script>
 </body>
 </html>
+
