--- a/index.html
+++ b/index.html
@@ -422,6 +422,10 @@
     <div class="app-icon">🌍</div>
     <div class="app-label">Civilization Hub</div>
 </a>
+        <a href="34.Nusantara Auto-Anchor (POS Mode).html" class="app-card cat-future">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <div class="app-label">Nusantara Auto-Anchor (POS Mode)</div>
+</a>
 
     </div>
 
@@ -540,4 +544,5 @@
     </script>
 </body>
 </html>
+
 
