--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
     <div class="app-label">Civilization Hub</div>
 </a>
         <a href="34.Nusantara Auto-Anchor (POS Mode).html" class="app-card cat-future">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="https://nanansuh234.github.io/Sunda-Nuswantara-OS/favicon.png">
     <div class="app-label">Nusantara Auto-Anchor (POS Mode)</div>
 </a>
 
@@ -544,5 +544,6 @@
     </script>
 </body>
 </html>
+
 
 
