--- a/index.html
+++ b/index.html
@@ -423,6 +423,7 @@
     <div class="app-label">Civilization Hub</div>
 </a>
         <a href="34.Nusantara Auto-Anchor (POS Mode).html" class="app-card cat-future">
+        <link rel="icon" type="image/png" href="https://nanansuh234.github.io/Sunda-Nuswantara-OS/favicon.png">
     <img src="https://nanansuh234.github.io/Sunda-Nuswantara-OS/favicon.png" alt="Icon POS" style="width: 50px; height: 50px; margin-bottom: 10px;">
     <div class="app-label">Nusantara Auto-Anchor (POS Mode)</div>
 </a>
@@ -544,6 +545,7 @@
     </script>
 </body>
 </html>
+
 
 
 
