--- a/index.html
+++ b/index.html
@@ -427,6 +427,10 @@
     <img src="https://nanansuh234.github.io/Sunda-Nuswantara-OS/favicon.png" alt="Icon POS" style="width: 50px; height: 50px; margin-bottom: 10px;">
     <div class="app-label">Nusantara Auto-Anchor (POS Mode)</div>
 </a>
+        <a href="35.Nusantara Savings Simulator.html" class="app-card cat-fin">
+            <div class="app-icon">💰</div>
+            <div class="app-label">Simulasi Tabungan Dinar & Dirham</div>
+        </a>
 
     </div>
 
@@ -545,6 +549,7 @@
     </script>
 </body>
 </html>
+
 
 
 
