Update 35.Nusantara Savings Simulator.html

--- a/35.Nusantara Savings Simulator.html
+++ b/35.Nusantara Savings Simulator.html
@@ -171,7 +171,7 @@
             { name: "Renovasi Rumah", icon: "🏠", priceDinar: 25 },
             { name: "Mobil Keluarga (MPV)", icon: "🚗", priceDinar: 85 },
             { name: "Rumah Sederhana", icon: "🏡", priceDinar: 150 },
-            { name: "Kebun Sawit 1 Ha", icon: "🌴", priceDinar: 40 }
+            { name: "Humanoid Robot", icon: "🤖", priceDinar: 40 }
         ];
 
         function calculate() {
@@ -260,4 +260,5 @@
 
     </script>
 </body>
+
 </html>
