--- a/index.html
+++ b/index.html
@@ -431,6 +431,10 @@
             <div class="app-icon">💰</div>
             <div class="app-label">Simulasi Tabungan Dinar & Dirham</div>
         </a>
+        <a href="36.Nusantara Income Generator.html" class="app-card cat-fin" style="border-color: var(--green);">
+            <div class="app-icon">🔨</div>
+            <div class="app-label">Income Generator</div>
+        </a>
 
     </div>
 
@@ -549,6 +553,7 @@
     </script>
 </body>
 </html>
+
 
 
 
