--- a/index.html
+++ b/index.html
@@ -435,6 +435,9 @@
             <div class="app-icon">🔨</div>
             <div class="app-label">Income Generator</div>
         </a>
+          <a href="37. Pusat Strategi Ekonomi.html" class="app-card cat-sys">
+            <div class="app-icon">🤝</div><div class="app-label">Pusat Strategi Ekonomi Nilai</div>
+        </a>
 
     </div>
 
@@ -553,6 +556,7 @@
     </script>
 </body>
 </html>
+
 
 
 
