--- a/index.html
+++ b/index.html
@@ -438,6 +438,18 @@
           <a href="37. Pusat Strategi Ekonomi.html" class="app-card cat-sys">
             <div class="app-icon">🤝</div><div class="app-label">Pusat Strategi Ekonomi Nilai</div>
         </a>
+        <a href="37. Jam Pasir Timer.html" class="app-card cat-sys">
+            <div class="app-icon">⏳</div>
+            <div class="app-label">Jam Pasir Nusantara</div>
+        </a>
+        <a href="38. Kawi Jawa Kuno.html" class="app-card cat-sys">
+            <div class="app-icon">🗿</div>
+            <div class="app-label">Prasasti Jawa Kawi</div>
+        </a>
+        <a href="39. Pagon Mataram.html" class="app-card cat-sys">
+            <div class="app-icon">✒️</div>
+            <div class="app-label">Mesin Ketik Pegon</div>
+        </a>
 
     </div>
 
@@ -556,6 +568,7 @@
     </script>
 </body>
 </html>
+
 
 
 
