--- a/index.html
+++ b/index.html
@@ -450,6 +450,10 @@
             <div class="app-icon">✒️</div>
             <div class="app-label">Mesin Ketik Pegon</div>
         </a>
+            <a href="40. Encoder Arsip Keraton.html" class="app-card cat-sys">
+            <div class="app-icon">✒️</div>
+            <div class="app-label">Encoder Arsip Keraton</div>
+        </a>
 
     </div>
 
@@ -568,6 +572,7 @@
     </script>
 </body>
 </html>
+
 
 
 
