Update 40. Encoder Arsip Keraton.html

--- a/40. Encoder Arsip Keraton.html
+++ b/40. Encoder Arsip Keraton.html
@@ -93,7 +93,7 @@
     
     <div class="input-section">
         <label>Input (Bahasa Indonesia):</label>
-        <textarea id="inputText" placeholder="Contoh: Saya berpendapat bahwa bupati menyembunyikan laporan pencurian itu karena takut dipecat."></textarea>
+        <textarea id="inputText" placeholder="Contoh: Spelling De Vries & Te Winkel (dipakai resmi 1864–1934)."></textarea>
     </div>
 
     <button onclick="encodeText()">Encode ke Bahasa Kolonial (1880)</button>
@@ -242,4 +242,5 @@
 </script>
 
 </body>
+
 </html>
