--- a/index.html
+++ b/index.html
@@ -454,6 +454,10 @@
             <div class="app-icon">✒️</div>
             <div class="app-label">Encoder Arsip Keraton</div>
         </a>
+               <a href="41. Ancient Astronomy .html" class="app-card cat-sys">
+            <div class="app-icon">🕐</div>
+            <div class="app-label">Ancient Astronomy .html</div>
+        </a>
 
     </div>
 
@@ -572,6 +576,7 @@
     </script>
 </body>
 </html>
+
 
 
 
