--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
         </a>
                <a href="41. Ancient Astronomy .html" class="app-card cat-sys">
             <div class="app-icon">🕐</div>
-            <div class="app-label">Ancient Astronomy .html</div>
+            <div class="app-label">Ancient Astronomy</div>
         </a>
 
     </div>
@@ -576,6 +576,7 @@
     </script>
 </body>
 </html>
+
 
 
 
