--- a/index.html
+++ b/index.html
@@ -458,6 +458,9 @@
             <div class="app-icon">🕐</div>
             <div class="app-label">Ancient Astronomy</div>
         </a>
+               <a href="43. Forbidden Tech.html" class="app-card cat-future">
+            <div class="app-icon">⚛️</div><div class="app-label">Forbidden Tech.html</div>
+        </a>
 
     </div>
 
@@ -576,6 +579,7 @@
     </script>
 </body>
 </html>
+
 
 
 
