--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
             <div class="app-label">Ancient Astronomy</div>
         </a>
                <a href="43. Forbidden Tech.html" class="app-card cat-future">
-            <div class="app-icon">⚛️</div><div class="app-label">Forbidden Tech.html</div>
+            <div class="app-icon">⚛️</div><div class="app-label">Forbidden Tech</div>
         </a>
 
     </div>
@@ -579,6 +579,7 @@
     </script>
 </body>
 </html>
+
 
 
 
