--- a/43. Forbidden Tech.html
+++ b/43. Forbidden Tech.html
@@ -147,7 +147,7 @@
 <body>
 
     <header>
-        <a href="40. Index Tools.html" class="back-btn">← BACK TO INDEX</a>
+        <a href="Index.html" class="back-btn">← BACK TO INDEX</a>
         <h1>FORBIDDEN TECH</h1>
         <div class="subtitle">SUB-MENU 43: LOST TECHNOLOGY RECONSTRUCTION</div>
     </header>
@@ -228,4 +228,5 @@
     </div>
 
 </body>
+
 </html>
