Update 43. Forbidden Tech.html

--- a/43. Forbidden Tech.html
+++ b/43. Forbidden Tech.html
@@ -147,7 +147,7 @@
 <body>
 
     <header>
-        <a href="Index.html" class="back-btn">← BACK TO INDEX</a>
+        <a href="index.html" class="back-btn">← BACK TO INDEX</a>
         <h1>FORBIDDEN TECH</h1>
         <div class="subtitle">SUB-MENU 43: LOST TECHNOLOGY RECONSTRUCTION</div>
     </header>
@@ -230,3 +230,4 @@
 </body>
 
 </html>
+
