Update 42. Advanced Systems.html

--- a/42. Advanced Systems.html
+++ b/42. Advanced Systems.html
@@ -142,7 +142,7 @@
 <body>
 
     <header>
-        <a href="40. Index Tools.html" class="back-btn">← MAIN INDEX</a>
+        <a href="index.html" class="back-btn">← MAIN INDEX</a>
         <h1>ADVANCED SYSTEMS</h1>
         <div class="subtitle">SUB-MENU 42: CIVILIZATION DEFENSE & ENERGY ARCHITECTURE</div>
     </header>
@@ -221,4 +221,5 @@
     </div>
 
 </body>
+
 </html>
