--- a/index.html
+++ b/index.html
@@ -458,6 +458,9 @@
             <div class="app-icon">🕐</div>
             <div class="app-label">Ancient Astronomy</div>
         </a>
+                   <a href="42. Advanced Systems.html" class="app-card cat-future">
+            <div class="app-icon">⚛️</div><div class="app-label">Forbidden Tech</div>
+        </a>
                <a href="43. Forbidden Tech.html" class="app-card cat-future">
             <div class="app-icon">⚛️</div><div class="app-label">Forbidden Tech</div>
         </a>
@@ -579,6 +582,7 @@
     </script>
 </body>
 </html>
+
 
 
 
