Update 43. Forbidden Tech.html

--- a/43. Forbidden Tech.html
+++ b/43. Forbidden Tech.html
@@ -219,6 +219,12 @@
             <div class="card-title">Cymatic Healing Organ</div>
             <div class="card-desc">Rekonstruksi teknologi penyembuhan suara Katedral/Tartaria. Visualisasi geometri suara (Chladni).</div>
         </a>
+                <a href="55. Cymatic Organ Configuration.html" class="card type-signal">
+            <span class="card-num">54</span>
+            <div class="tag">HEALING</div>
+            <div class="card-title">Cymatic Healing Organ</div>
+            <div class="card-desc">Rekonstruksi Prequensi suara >Cymatic Healing Organ Katedral/Tartaria. (Chladni).</div>
+        </a>
 
     </div>
 
@@ -230,4 +236,5 @@
 </body>
 
 </html>
+
 
