--- a/02. Kalender Sunda Nuswantara.html
+++ b/02. Kalender Sunda Nuswantara.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuswantara OS v12.3 - Full Holiday Sync</title>
+    <title>Nuswantara OS v12.4 - Fixed Layout</title>
     <style>
         :root { --neon: #d4af37; --bg: #0a0a0a; --card: #151515; --holiday: #ff4444; }
         body { background: var(--bg); color: var(--neon); font-family: 'Segoe UI', sans-serif; padding: 20px; display: flex; flex-direction: column; align-items: center; }
@@ -16,6 +16,7 @@
         .grid { display: grid; grid-template-columns: repeat(7, 1fr); gap: 8px; }
         .day-label { text-align: center; font-size: 0.65rem; color: #555; font-weight: bold; padding-bottom: 10px; border-bottom: 1px solid #333; }
         .date-cell { aspect-ratio: 1/1; border: 1px solid #222; display: flex; flex-direction: column; align-items: center; justify-content: center; border-radius: 8px; position: relative; }
+        .empty-cell { aspect-ratio: 1/1; border: none; } /* Class baru untuk spasi kosong */
         .date-num { font-size: 1.1rem; font-weight: bold; color: #eee; }
         .pasaran-label { font-size: 0.5rem; color: var(--neon); margin-top: 2px; }
         .is-holiday { border-color: var(--holiday) !important; background: rgba(255, 68, 68, 0.05); }
@@ -54,7 +55,8 @@
 <script>
     const months = ["Wiwitan", "Gangga", "Bija", "Trubus", "Teja", "Baskara", "Kartika", "Huma", "Phala", "Lumbung", "Reswara", "Purnaka", "Suwung"];
     const pasarans = ["Legi", "Pahing", "Pon", "Wage", "Kliwon"];
-    const baseDays = ["Sukra (S)", "Tumpak (T)", "Radite (R)", "Soma (S)", "Anggara (A)", "Budha (B)", "Respati (R)"];
+    // UPDATE: Susunan hari dibuat FIX sesuai gambar (Radite di awal)
+    const fixedDays = ["Radite (Rad)", "Soma (Som)", "Anggara (Ang)", "Budha (Bud)", "Respati (Res)", "Sukra (Suk)", "Tumpak (Tum)"];
     
     const yearConfig = {
         "2025": { label: "Tahun 001 - Air (Venus)", offset: 0 },
@@ -103,7 +105,7 @@
         let diff = Math.floor((now - anchor) / 86400000);
         
         let targetMonth = Math.floor(diff / 28);
-        document.getElementById('monthSelect').value = targetMonth > 12 ? 12 : targetMonth;
+        document.getElementById('monthSelect').value = targetMonth > 12 ? 12 : (targetMonth < 0 ? 0 : targetMonth);
         document.getElementById('yearSelect').value = now.getFullYear();
         render();
     }
@@ -119,13 +121,22 @@
         const grid = document.getElementById('grid');
         grid.innerHTML = "";
 
-        let currentDays = [...baseDays];
-        for(let i=0; i<config.offset; i++) { currentDays.push(currentDays.shift()); }
-        currentDays.forEach(d => grid.innerHTML += `<div class="day-label">${d}</div>`);
+        // RENDER HEADER (FIXED, tidak bergeser)
+        fixedDays.forEach(d => grid.innerHTML += `<div class="day-label">${d}</div>`);
 
         const hList = document.getElementById('holidayList');
         hList.innerHTML = "";
         const mHolidays = (holidays[yr] || []).filter(h => h.m === mIdx);
+
+        // HITUNG POSISI AWAL (Indentasi)
+        // Tahun 2025 dimulai hari Sukra (Index ke-5 di array fixedDays: Rad,Som,Ang,Bud,Res,Suk,Tum)
+        // Rumus: (BaseIndexSukra + YearOffset) % 7
+        let startColIndex = (5 + config.offset) % 7; 
+
+        // Buat kotak kosong sebelum tanggal 1
+        for(let i=0; i<startColIndex; i++) {
+            grid.innerHTML += `<div class="empty-cell"></div>`;
+        }
 
         let now = new Date();
         let anchor = new Date(now.getFullYear(), 2, 21);
