--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
             </div>
 
             <div style="text-align:center; padding: 20px; font-size:0.6rem; color:#666;">
-                SYSTEM READY // FREQUENCY ALIGNED
+                SYSTEM READY // FREQUENCY ALIGNED // NANAN SUHENDAR
             </div>
         </div>
 
@@ -473,7 +473,7 @@
 
         function updateWidget() {
             const now = new Date();
-            document.getElementById('masehi-clock').innerText = "Ref: " + now.toLocaleTimeString('id-ID');
+            document.getElementById('masehi-clock').innerText = "Local : " + now.toLocaleTimeString('id-ID');
 
             const h = now.getHours();
             const m = now.getMinutes();
@@ -715,3 +715,4 @@
     </script>
 </body>
 </html>
+
