--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
 
         function updateWidget() {
             const now = new Date();
-            document.getElementById('masehi-clock').innerText = "Ref: " + now.toLocaleTimeString('id-ID');
+            document.getElementById('masehi-clock').innerText = "Local : " + now.toLocaleTimeString('id-ID');
 
             const h = now.getHours();
             const m = now.getMinutes();
@@ -715,3 +715,4 @@
     </script>
 </body>
 </html>
+
